# backend/docs/swagger.json
@@ -2,11 +2,11 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
+        "title": "LangBridge API",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "LangBridge Support",
+            "url": "http://langbridge.io/support",
+            "email": "support@langbridge.io"
         },
         "license": {
             "name": "Apache 2.0",
@@ -14,8 +14,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "host": "api.langbridge.io",
     "paths": {
         "/api/v1/projects/{projectID}/keys": {
             "post": {
@@ -110,14 +109,5 @@
                 }
             }
         }
-    },
-    "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
-        }
-    },
-    "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
     }
 }
