# backend/internal/app/api/app.go
@@ -31,19 +31,14 @@ var App = fx.Options(
 
 // New returns a new instance of the App
 //
-//	@title						Swagger Example API
+//	@title						LangBridge API
 //	@version					1.0
-//	@description				This is a sample server celler server.
-//	@contact.name				API Support
-//	@contact.url				http://www.swagger.io/support
-//	@contact.email				support@swagger.io
+//	@contact.name				LangBridge Support
+//	@contact.url				http://langbridge.io/support
+//	@contact.email				support@langbridge.io
 //	@license.name				Apache 2.0
 //	@license.url				http://www.apache.org/licenses/LICENSE-2.0.html
-//	@host						localhost:8080
-//	@BasePath					/api/v1
-//	@securityDefinitions.basic	BasicAuth
-//	@externalDocs.description	OpenAPI
-//	@externalDocs.url			https://swagger.io/resources/open-api/
+//	@host						https://api.langbridge.io
 func New() *fx.App {
 	return fx.New(App)
 }
